--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Packages/WebSocketService"]
 	path = Packages/WebSocketService
 	url = git@github.com:double-coconut/module-web-socket-service.git
+[submodule "Packages/AssetDatabase"]
+	path = Packages/AssetDatabase
+	url = git@github.com:double-coconut/module-asset-database.git
